--- a/frontend/index.html
+++ b/frontend/index.html
@@ -47,7 +47,7 @@
     </section>
 
     <footer class="footer">
-      <small>Local dev version — replace endpoints & keys in <code>app.js</code>.</small>
+      <small>By Git Girls</small>
     </footer>
   </main>
 
