--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,7 @@
 
     <form id="museForm" class="card" autocomplete="off">
       <label for="additionalInfo">Additional information (e.g., upskilling, enrollments, interests)</label>
-      <textarea id="additionalInfo" rows="4" placeholder="e.g. learning Docker, enrolled in ALX Data Science..."></textarea>
+      <textarea id="additionalInfo" rows="4" placeholder="e.g. Learning Docker, enrolled in Coursera's Data Science, interested in the healthcare..."></textarea>
 
       <label for="cvFile">Upload CV</label>
       <input id="cvFile" type="file" accept=".txt,.pdf,.doc,.docx" />
