added file format and styles

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,6 +18,7 @@
 
       <label for="cvFile">Upload CV</label>
       <input id="cvFile" type="file" accept=".txt,.pdf,.doc,.docx" />
+      <p class="file-format">(txt, .pdf, .doc, .docx)</p>
 
       <label for="additionalInfo">Additional information (e.g., upskilling, enrollments, interests)</label>
       <textarea id="additionalInfo" rows="4" placeholder="e.g. Learning Docker, enrolled in Coursera's Data Science, interested in the healthcare..."></textarea>
